adding more styles and also working on js

--- a/index.html
+++ b/index.html
@@ -8,9 +8,25 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
+ 
+    <header>
         <button id="btn-id"> color changing</button>
-    </div>
+    </header>
+
+
+
+     <div id="my-Side-nav" class="side-close">
+         <a href="#" id="hide" >&times;</a>
+         <a href="#">Home</a>
+         <a href="#">Contact</a>
+         <a href="#">Services</a>
+         <a href="#">About</a>  
+         
+     </div>
+     <div href="#" id="show" class="side-show">open</div>
+
+
+    
     <script src="index.js"></script>
 </body>
 </html>
